--- a/BestNews/Base.lproj/Main.storyboard
+++ b/BestNews/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="m6B-gB-kOC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="m6B-gB-kOC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -597,7 +597,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Forward Filled-50" translatesAutoresizingMaskIntoConstraints="NO" id="Tij-rQ-r4u">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chevron Right-26" translatesAutoresizingMaskIntoConstraints="NO" id="Tij-rQ-r4u">
                                                     <rect key="frame" x="342" y="17" width="25" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="25" id="LDb-dO-o4T"/>
@@ -760,7 +760,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="gI1-KP-5am"/>
                                 </constraints>
-                                <state key="normal" image="Back-64"/>
+                                <state key="normal" image="Back-26"/>
                                 <connections>
                                     <action selector="back:" destination="Ns9-j1-sjC" eventType="touchUpInside" id="ugF-R9-9cS"/>
                                 </connections>
@@ -911,11 +911,6 @@
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </view>
-                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eFQ-CQ-pHI">
-                                                            <rect key="frame" x="8" y="363" width="30" height="30"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <state key="normal" backgroundImage="Comments-50"/>
-                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
@@ -946,7 +941,6 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.78971970079999998" green="0.2425644398" blue="0.24827474359999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <outlet property="commentsButton" destination="eFQ-CQ-pHI" id="cO5-sP-AHj"/>
                                             <outlet property="desc" destination="9a6-at-XSZ" id="YPS-Uy-na0"/>
                                             <outlet property="newsImage" destination="QRo-CD-tSn" id="fOq-Tw-mMB"/>
                                             <outlet property="source" destination="85y-dQ-Cqq" id="aM5-3l-ddN"/>
@@ -967,7 +961,7 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="8SH-2g-nSY" id="bFC-dr-T5u"/>
-                        <segue destination="Qup-R7-nyZ" kind="showDetail" identifier="commentVC" id="f0L-D0-sSc"/>
+                        <segue destination="Qup-R7-nyZ" kind="presentation" identifier="commentVC" id="8Li-f3-d7X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xK3-Su-jr7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -997,7 +991,7 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentsCell" rowHeight="139" id="hdb-SG-Ck1">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentsCell" rowHeight="139" id="hdb-SG-Ck1" customClass="CommentsCell" customModule="BestNews" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="139"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hdb-SG-Ck1" id="Ewt-7B-GAm">
@@ -1005,14 +999,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Saska Rauhala" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pa0-nl-9Ya">
-                                                    <rect key="frame" x="8" y="8" width="359" height="24"/>
+                                                    <rect key="frame" x="8" y="0.0" width="359" height="24"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Amazing can't wait to see more" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PhK-Rw-qtc">
-                                                    <rect key="frame" x="8" y="30" width="359" height="101"/>
+                                                    <rect key="frame" x="8" y="20" width="359" height="162"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1021,10 +1015,14 @@
                                             <constraints>
                                                 <constraint firstItem="PhK-Rw-qtc" firstAttribute="leading" secondItem="Ewt-7B-GAm" secondAttribute="leadingMargin" id="3nt-m9-jSh"/>
                                                 <constraint firstItem="PhK-Rw-qtc" firstAttribute="trailing" secondItem="Ewt-7B-GAm" secondAttribute="trailingMargin" id="JPD-Nm-BZH"/>
-                                                <constraint firstItem="PhK-Rw-qtc" firstAttribute="bottom" secondItem="Ewt-7B-GAm" secondAttribute="bottomMargin" id="kwL-R7-hkX"/>
-                                                <constraint firstItem="PhK-Rw-qtc" firstAttribute="top" secondItem="Ewt-7B-GAm" secondAttribute="topMargin" constant="22" id="oFN-Yo-kAY"/>
+                                                <constraint firstItem="PhK-Rw-qtc" firstAttribute="bottom" secondItem="Ewt-7B-GAm" secondAttribute="bottomMargin" constant="51.5" id="kwL-R7-hkX"/>
+                                                <constraint firstItem="PhK-Rw-qtc" firstAttribute="top" secondItem="Ewt-7B-GAm" secondAttribute="topMargin" constant="12" id="oFN-Yo-kAY"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLbl" destination="PhK-Rw-qtc" id="Haj-aY-fIr"/>
+                                            <outlet property="commenterLbl" destination="pa0-nl-9Ya" id="gEf-4o-c9B"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -1065,7 +1063,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Jj-15-9oR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2825" y="782"/>
+            <point key="canvasLocation" x="2824.8000000000002" y="781.25937031484261"/>
         </scene>
         <!--SubjectVC-->
         <scene sceneID="9tn-Fl-GJh">
@@ -1099,12 +1097,10 @@
     </scenes>
     <resources>
         <image name="Back-26" width="26" height="26"/>
-        <image name="Back-64" width="64" height="64"/>
         <image name="Category-50" width="50" height="50"/>
-        <image name="Comments-50" width="50" height="50"/>
+        <image name="Chevron Right-26" width="26" height="26"/>
         <image name="Elective-50" width="50" height="50"/>
         <image name="Enter-50" width="50" height="50"/>
-        <image name="Forward Filled-50" width="50" height="50"/>
         <image name="News-50" width="50" height="50"/>
         <image name="Very Popular Topic-50" width="50" height="50"/>
     </resources>
